Constants refactor, readme changes

--- a/camerakit/src/main/AndroidManifest.xml
+++ b/camerakit/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true"/>
+        android:required="false"/>
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false"/>
