Heavy refactoring, setParameters bug fixed

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
         </activity>
 
         <activity
-            android:name=".PreviewActivity"
-            android:screenOrientation="portrait" />
+            android:name=".PicturePreviewActivity" />
+
+        <activity android:name=".VideoPreviewActivity"/>
 
     </application>
 
