--- a/camerakit/src/main/AndroidManifest.xml
+++ b/camerakit/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.flurgle.camerakit">
+    package="com.otaliastudios.cameraview">
 
     <uses-permission android:name="android.permission.CAMERA" />
 
