--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -31,6 +31,9 @@ android {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
     compile "com.android.support:exifinterface:$supportLibVersion"
     compile "com.android.support:support-annotations:$supportLibVersion"
 }
