--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,13 @@ android:
     - build-tools-26.0.1
     - android-26
     - doc-26
+    - sys-img-armeabi-v7a-android-26
+
+before_script:
+  - echo no | android create avd --force --name test --target android-26 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
   - ./gradlew clean connectedCheck testDebugUnitTest
