--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -17,7 +17,12 @@ android {
         versionName project.version
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
