Fix TextureView tests if not hardware accelerated

--- a/cameraview/src/androidTest/AndroidManifest.xml
+++ b/cameraview/src/androidTest/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application>
-        <activity android:name=".TestActivity"/>
+        <activity
+            android:hardwareAccelerated="true"
+            android:name=".TestActivity"/>
     </application>
 
 </manifest>
