New tests, add CameraController.STATE (#37)
* Add set/get parameters tests

* CameraCallbacks tests

* Nits

* Nits 2

* Nits 3

* Nits 4

* CameraController integration tests

* Fix some bugs

* Add CameraController.STATE, fix CameraView.isStarted()

* Fix old tests

* Video and focus tests

* Remove video test, fails on Travis

* Add picture tests

* Remove other video test

* Add audio tests

* new travis.yml

* WorkerHandler changes

* Better GridLinesLayoutTest

* Try add logcat to travis build

* Debug failing test

* Add logs

* Grant permissions, bump tests to N

* Add wake locks

* Add wake lock permission

* Remove integration tests

* Change view matcher

* Refinements

--- a/cameraview/src/androidTest/AndroidManifest.xml
+++ b/cameraview/src/androidTest/AndroidManifest.xml
@@ -3,9 +3,13 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
 
     <application>
         <activity
+            android:configChanges="orientation|screenLayout|keyboardHidden"
             android:hardwareAccelerated="true"
             android:name=".TestActivity"/>
     </application>
