--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".CameraActivity"
             android:theme="@style/Theme.MainActivity"
             android:configChanges="orientation|screenLayout|keyboardHidden">
             <intent-filter>
