Refactor some classes, fix hardware acceleration bug, disable cropping for SurfaceView

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".CameraActivity"
             android:theme="@style/Theme.MainActivity"
+            android:hardwareAccelerated="true"
             android:configChanges="orientation|screenLayout|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
