--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 // Required by bintray
-version = '1.5.0'
+version = '1.5.1'
 group = 'com.otaliastudios'
 
 //region android dependencies
@@ -48,7 +48,7 @@ dependencies {
     androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    implementation "com.android.support:exifinterface:$supportLibVersion"
+    api "com.android.support:exifinterface:$supportLibVersion"
     implementation "com.android.support:support-annotations:$supportLibVersion"
 }
 
