--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
 ext {
     compileSdkVersion = 28
     supportLibVersion = '28.0.0-rc02'
+    lifecycleVersion = '1.1.1'
     minSdkVersion = 15
     targetSdkVersion = 28
 }
