throws error while a picture is being captured

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -22,7 +22,8 @@ android {
 }
 
 dependencies {
-    implementation project(':cameraview')
+    //implementation project(':cameraview')
+    implementation 'com.otaliastudios:cameraview:+'
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
     implementation "com.android.support:design:$supportLibVersion"
 }
