Migrate to AndroidX

--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName project.version
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -43,15 +43,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
     androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    api "com.android.support:exifinterface:$supportLibVersion"
-    api "android.arch.lifecycle:common:$lifecycleVersion"
-    implementation "com.android.support:support-annotations:$supportLibVersion"
+    api 'androidx.exifinterface:exifinterface:1.0.0'
+    api 'androidx.lifecycle:lifecycle-common:2.1.0-alpha01'
+    implementation 'androidx.annotation:annotation:1.0.1'
 }
 
 //endregion
