--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 // Required by bintray
-version = '1.6.1'
+version = '2.0.0-beta01'
 group = 'com.otaliastudios'
 
 //region android dependencies
