Fix unbindFromSurface bug

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         <activity
             android:name=".CameraActivity"
             android:theme="@style/Theme.MainActivity"
-            android:hardwareAccelerated="true"
             android:configChanges="orientation|screenLayout|keyboardHidden"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
